# Common options
option('orc', type : 'feature', value : 'auto', yield : true)
option('introspection', type : 'feature', value : 'auto', yield : true, description : 'Generate gobject-introspection bindings')
option('package-name', type : 'string', yield : true,
       description : 'package name to use in plugins')
option('package-origin', type : 'string', value : 'Unknown package origin', yield : true,
       description : 'package origin URL to use in plugins')
option('doc', type : 'feature', value : 'auto', yield: true,
       description: 'Enable documentation.')

# Common feature options
option('examples', type : 'feature', value : 'auto')
option('tests', type : 'feature', value : 'auto')

# webOS options
option('machine', type : 'string', yield : true, description : 'target machine to build')

# Feature options for plugins with no external deps
option('unifiedsinkbin', type : 'feature', value : 'auto')

# Feature options for plugins with external deps
